rename page.css 1

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -14013,36 +14013,36 @@ h3:first-child {
   -webkit-justify-content: center !important;
   justify-content: center !important;
 }
-._socgfm6::-moz-focus-inner {
+.products-container__tablist-btn-1::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._socgfm6:focus::-moz-focus-inner {
+.products-container__tablist-btn-1:focus::-moz-focus-inner {
   border: none !important;
 }
-._socgfm6:-moz-focusring {
+.products-container__tablist-btn-1:-moz-focusring {
   outline: 0 !important;
 }
-._socgfm6:focus-visible {
+.products-container__tablist-btn-1:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px var(--f-mkcy-f), 0 0 0 4px var(--f-k-smk-x) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._socgfm6:focus-visible {
+  .products-container__tablist-btn-1:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._socgfm6:hover {
+.products-container__tablist-btn-1:hover {
   text-decoration: none !important;
   cursor: default !important;
   opacity: 1 !important;
 }
-._3i1l2kz:after {
+.products-container__tablist-btn-1-text-wrapper:after {
   content: '' !important;
   background-color: currentcolor !important;
   height: 2px !important;
@@ -14060,49 +14060,49 @@ h3:first-child {
   transform: scaleX(1) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._3i1l2kz:after {
+  .products-container__tablist-btn-1-text-wrapper:after {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._3i1l2kz:hover {
+.products-container__tablist-btn-1-text-wrapper:hover {
   opacity: 1 !important;
 }
-._3i1l2kz:hover:after {
+.products-container__tablist-btn-1-text-wrapper:hover:after {
   -webkit-transform: scaleX(1) !important;
   -ms-transform: scaleX(1) !important;
   transform: scaleX(1) !important;
   opacity: 1 !important;
 }
-._1ibug9jx::-moz-focus-inner {
+.products-container__tablist-btn-2::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1ibug9jx:focus::-moz-focus-inner {
+.products-container__tablist-btn-2:focus::-moz-focus-inner {
   border: none !important;
 }
-._1ibug9jx:-moz-focusring {
+.products-container__tablist-btn-2:-moz-focusring {
   outline: 0 !important;
 }
-._1ibug9jx:hover {
+.products-container__tablist-btn-2:hover {
   text-decoration: none !important;
 }
-._1ibug9jx:focus-visible {
+.products-container__tablist-btn-2:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px var(--f-mkcy-f), 0 0 0 4px var(--f-k-smk-x) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1ibug9jx:focus-visible {
+  .products-container__tablist-btn-2:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._882esz:after {
+.products-container__tablist-btn-2-wrapper:after {
   content: '' !important;
   background-color: currentcolor !important;
   height: 2px !important;
@@ -14120,49 +14120,49 @@ h3:first-child {
   width: 100% !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._882esz:after {
+  .products-container__tablist-btn-2-wrapper:after {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._882esz:hover {
+.products-container__tablist-btn-2-wrapper:hover {
   opacity: 0.65 !important;
 }
-._882esz:hover:after {
+.products-container__tablist-btn-2-wrapper:hover:after {
   -webkit-transform: scaleX(1) !important;
   -ms-transform: scaleX(1) !important;
   transform: scaleX(1) !important;
   opacity: 0.65 !important;
 }
-._1igwknb5::-moz-focus-inner {
+.products-container__tablist-btn-wrapper::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1igwknb5:focus::-moz-focus-inner {
+.products-container__tablist-btn-wrapper:focus::-moz-focus-inner {
   border: none !important;
 }
-._1igwknb5:-moz-focusring {
+.products-container__tablist-btn-wrapper:-moz-focusring {
   outline: 0 !important;
 }
-._1igwknb5:hover {
+.products-container__tablist-btn-wrapper:hover {
   text-decoration: none !important;
 }
-._1igwknb5:focus-visible {
+.products-container__tablist-btn-wrapper:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px var(--f-mkcy-f), 0 0 0 4px var(--f-k-smk-x) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1igwknb5:focus-visible {
+  .products-container__tablist-btn-wrapper:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1rwlbyy {
+.header__search-tabs-filters-content {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   position: relative !important;
@@ -14179,7 +14179,7 @@ h3:first-child {
   margin: -1px !important;
   min-width: 0 !important;
 }
-._1t9u8f6n {
+.header__search-tabs-filters-label {
   cursor: pointer !important;
   display: block !important;
   background-clip: padding-box !important;
@@ -14191,7 +14191,7 @@ h3:first-child {
   min-width: 0 !important;
   padding: 14px 32px !important;
 }
-._1t9u8f6n::after {
+.header__search-tabs-filters-label::after {
   background-clip: padding-box !important;
   border: 1px solid transparent !important;
   border-radius: 32px !important;
@@ -14203,23 +14203,23 @@ h3:first-child {
   top: 0 !important;
   z-index: 0 !important;
 }
-._1t9u8f6n:hover::before {
+.header__search-tabs-filters-label:hover::before {
   display: block !important;
 }
-._1t9u8f6n:hover::after {
+.header__search-tabs-filters-label:hover::after {
   background-color: var(--d-nc-lt-s) !important;
 }
-._1t9u8f6n:focus-within::before {
+.header__search-tabs-filters-label:focus-within::before {
   display: block !important;
 }
-._1t9u8f6n:focus-within::after {
+.header__search-tabs-filters-label:focus-within::after {
   background-color: var(--f-mkcy-f) !important;
   border-color: var(--f-mkcy-f) !important;
   box-shadow: var(--ih-jiz-p) !important;
   left: 0 !important;
   right: 0 !important;
 }
-._1t9u8f6n::before {
+.header__search-tabs-filters-label::before {
   border-width: 0 1px !important;
   border-style: solid !important;
   border-color: var(--big-search-form_background, transparent) !important;
@@ -14233,30 +14233,30 @@ h3:first-child {
   z-index: 0 !important;
   border-left: 0 !important;
 }
-._1yibeas::placeholder {
+.header__search-tabs-filters-label-input::placeholder {
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--e-y-j-d-v-j) !important;
   color: var(--f-k-smk-x) !important;
   opacity: 0.7 !important;
 }
-._1yibeas:-ms-input-placeholder {
+.header__search-tabs-filters-label-input:-ms-input-placeholder {
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--e-y-j-d-v-j) !important;
   color: var(--f-k-smk-x) !important;
   opacity: 0.7 !important;
 }
-._1yibeas::-ms-clear {
+.header__search-tabs-filters-label-input::-ms-clear {
   display: none !important;
 }
-._1yibeas:focus {
+.header__search-tabs-filters-label-input:focus {
   outline: 0 !important;
 }
-._1yibeas:focus:not(:placeholder-shown) {
+.header__search-tabs-filters-label-input:focus:not(:placeholder-shown) {
   padding-right: 12px !important;
 }
-._1tb077f {
+.header__search-tabs-filter-body-dialog {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -14266,7 +14266,7 @@ h3:first-child {
   margin: 0 -32px -8px !important;
   max-width: 848px !important;
 }
-._1czersj {
+.header__search-tabs-filter-spacer {
   border: 0 !important;
   clip: rect(0 0 0 0) !important;
   -webkit-clip-path: inset(100%) !important;
@@ -14278,7 +14278,7 @@ h3:first-child {
   white-space: nowrap !important;
   width: 1px !important;
 }
-._4eosylk {
+.header__search-tabs-filter-input-search {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
@@ -14309,28 +14309,28 @@ h3:first-child {
   vertical-align: middle !important;
   z-index: 0 !important;
 }
-._4eosylk::-moz-focus-inner {
+.header__search-tabs-filter-input-search::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._4eosylk:focus::-moz-focus-inner {
+.header__search-tabs-filter-input-search:focus::-moz-focus-inner {
   border: none !important;
 }
-._4eosylk:-moz-focusring {
+.header__search-tabs-filter-input-search:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._4eosylk {
+  .header__search-tabs-filter-input-search {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._4eosylk:focus-visible {
+.header__search-tabs-filter-input-search:focus-visible {
   box-shadow: 0 0 0 2px var(--f-mkcy-f), 0 0 0 4px var(--f-k-smk-x) !important;
 }
-._4eosylk::before {
+.header__search-tabs-filter-input-search::before {
   background: var(--dc-gy-f-v) !important;
   bottom: 0 !important;
   content: '' !important;
@@ -14343,16 +14343,16 @@ h3:first-child {
   opacity: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._4eosylk::before {
+  .header__search-tabs-filter-input-search::before {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._4eosylk:hover::before {
+.header__search-tabs-filter-input-search:hover::before {
   opacity: 1 !important;
 }
-._186q534 {
+.header__search-tabs-filter-input-icon {
   display: -webkit-inline-box !important;
   display: -moz-inline-box !important;
   display: -ms-inline-flexbox !important;
@@ -14362,7 +14362,7 @@ h3:first-child {
   position: relative !important;
   z-index: 1 !important;
 }
-._1ikdh859 {
+.header__search-tabs-filter-input-label {
   opacity: 0 !important;
   padding-left: 8px !important;
   padding-right: 4px !important;
@@ -14370,7 +14370,7 @@ h3:first-child {
   transition-delay: 0.1s !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1ikdh859 {
+  .header__search-tabs-filter-input-label {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
@@ -23357,7 +23357,7 @@ html :where(img[class*='wp-image-']) {
   height: 80px !important;
   justify-content: center !important;
 }
-._socgfm6 {
+.products-container__tablist-btn-1 {
   outline: 0 !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
@@ -23372,30 +23372,30 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x) !important;
 }
 @media (min-width: 950px) {
-  ._socgfm6 {
+  .products-container__tablist-btn-1 {
     font-size: var(--c-zdwk-p) !important;
     line-height: var(--j-p-z-kco) !important;
     font-weight: var(--jx-zk-pv) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._socgfm6 {
+  .products-container__tablist-btn-1 {
     font-size: var(--iw-ehf-f) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
     padding: 0 !important;
   }
 }
-._3i1l2kz {
+.products-container__tablist-btn-1-text-wrapper {
   margin: 10px 12px !important;
   position: relative !important;
 }
 @media (min-width: 1128px) {
-  ._3i1l2kz {
+  .products-container__tablist-btn-1-text-wrapper {
     margin: 10px 16px !important;
   }
 }
-._3i1l2kz::after {
+.products-container__tablist-btn-1-text-wrapper::after {
   content: '' !important;
   background-color: currentcolor !important;
   height: 2px !important;
@@ -23406,7 +23406,7 @@ html :where(img[class*='wp-image-']) {
   width: 100% !important;
   transform: scaleX(1) !important;
 }
-._1ibug9jx {
+.products-container__tablist-btn-2 {
   outline: 0 !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
@@ -23421,40 +23421,40 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x) !important;
 }
 @media (min-width: 950px) {
-  ._1ibug9jx {
+  .products-container__tablist-btn-2 {
     font-size: var(--c-zdwk-p) !important;
     line-height: var(--j-p-z-kco) !important;
     font-weight: var(--jx-zk-pv) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1ibug9jx {
+  .products-container__tablist-btn-2 {
     font-size: var(--iw-ehf-f) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
     padding: 0 !important;
   }
 }
-._882esz {
+.products-container__tablist-btn-2-wrapper {
   margin: 10px 12px !important;
   position: relative !important;
 }
 @media (min-width: 1128px) {
-  ._882esz {
+  .products-container__tablist-btn-2-wrapper {
     margin: 10px 16px !important;
   }
 }
-._1t3783v {
+.products-container__tablist-btn-1-text {
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._1t3783v {
+  .products-container__tablist-btn-1-text {
     font-size: var(--iw-ehf-f) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
   }
 }
-._882esz::after {
+.products-container__tablist-btn-2-wrapper::after {
   content: '' !important;
   background-color: currentcolor !important;
   height: 2px !important;
@@ -23465,7 +23465,7 @@ html :where(img[class*='wp-image-']) {
   transition: -ms-transform 0.2s, -webkit-transform 0.2s, transform 0.2s !important;
   width: 100% !important;
 }
-._1igwknb5 {
+.products-container__tablist-btn-wrapper {
   outline: 0 !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
@@ -23479,14 +23479,14 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x) !important;
 }
 @media (min-width: 950px) {
-  ._1igwknb5 {
+  .products-container__tablist-btn-wrapper {
     font-size: var(--c-zdwk-p) !important;
     line-height: var(--j-p-z-kco) !important;
     font-weight: var(--jx-zk-pv) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1igwknb5 {
+  .products-container__tablist-btn-wrapper {
     font-size: var(--iw-ehf-f) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
@@ -23523,16 +23523,16 @@ html :where(img[class*='wp-image-']) {
   min-width: 0;
   pointer-events: auto;
 }
-._1jkbosm7 {
+.header__search-tabs-filters-wrapper {
   flex: 1 0 0% !important;
   min-width: 0 !important;
 }
 @media (min-width: 950px) {
-  ._1jkbosm7 {
+  .header__search-tabs-filters-wrapper {
     flex: 1.5 0 0% !important;
   }
 }
-._1rwlbyy {
+.header__search-tabs-filters-content {
   -webkit-box-align: center !important;
   position: relative !important;
   align-items: center !important;
@@ -23541,7 +23541,7 @@ html :where(img[class*='wp-image-']) {
   margin: -1px !important;
   min-width: 0 !important;
 }
-._1t9u8f6n {
+.header__search-tabs-filters-label {
   cursor: pointer !important;
   display: block !important;
   background-clip: padding-box !important;
@@ -23551,18 +23551,18 @@ html :where(img[class*='wp-image-']) {
   min-width: 0 !important;
   padding: 14px 32px !important;
 }
-._16fjzef {
+.header__search-tabs-filters-label-wrapper {
   position: relative !important;
   z-index: 1 !important;
 }
-._snpd7k {
+.header__search-tabs-filters-label-text {
   font-size: var(--f-cv-j-j-p) !important;
   line-height: var(--f-l-h-bac) !important;
   font-weight: var(--h-oqhch) !important;
   letter-spacing: var(--mq-yk-l) !important;
   padding-bottom: 2px !important;
 }
-._1yibeas {
+.header__search-tabs-filters-label-input {
   display: block !important;
   border: 0 !important;
   margin: 0 !important;
@@ -23575,7 +23575,7 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x) !important;
   text-overflow: ellipsis !important;
 }
-._1t9u8f6n::after {
+.header__search-tabs-filters-label::after {
   background-clip: padding-box !important;
   border: 1px solid transparent !important;
   border-radius: 32px !important;
@@ -23584,7 +23584,7 @@ html :where(img[class*='wp-image-']) {
   position: absolute !important;
   z-index: 0 !important;
 }
-._yu5dnq {
+.header__search-tabs-filter-body-container {
   left: 0 !important;
   position: absolute !important;
   right: 0 !important;
@@ -23617,7 +23617,7 @@ html :where(img[class*='wp-image-']) {
   margin-top: 12px;
   padding: 16px 32px;
 }
-._1tb077f {
+.header__search-tabs-filter-body-dialog {
   display: flex !important;
   padding: 16px 8px 24px !important;
   margin: 0 -32px -8px !important;
@@ -23743,7 +23743,7 @@ html :where(img[class*='wp-image-']) {
 .dir.header__search-tabs-filter-body-where-region-item-text[class][class] {
   margin: var(--fgg-f-l-a) var(--d-b-mrdy) 0 var(--d-b-mrdy);
 }
-._1czersj {
+.header__search-tabs-filter-spacer {
   border: 0 !important;
   clip: rect(0, 0, 0, 0) !important;
   clip-path: inset(100%) !important;
@@ -23891,7 +23891,7 @@ html :where(img[class*='wp-image-']) {
   margin-left: -6px;
   padding-right: 9px;
 }
-._4eosylk {
+.header__search-tabs-filter-input-search {
   appearance: none !important;
   background-image: initial !important;
   background-position: initial !important;
@@ -23924,11 +23924,11 @@ html :where(img[class*='wp-image-']) {
   z-index: 0 !important;
 }
 @supports (--a: a) {
-  ._4eosylk {
+  .header__search-tabs-filter-input-search {
     background-color: var(--header_brand-color, var(--ihf-tp-q)) !important;
   }
 }
-._4eosylk::before {
+.header__search-tabs-filter-input-search::before {
   background: var(--dc-gy-f-v) !important;
   inset: 0 !important;
   content: '' !important;
@@ -23937,13 +23937,13 @@ html :where(img[class*='wp-image-']) {
   z-index: 0 !important;
   opacity: 0 !important;
 }
-._186q534 {
+.header__search-tabs-filter-input-icon {
   display: inline-flex !important;
   padding: 16px !important;
   position: relative !important;
   z-index: 1 !important;
 }
-._1ikdh859 {
+.header__search-tabs-filter-input-label {
   opacity: 0 !important;
   padding-left: 8px !important;
   padding-right: 4px !important;
