--- a/src/css/global.css
+++ b/src/css/global.css
@@ -23,7 +23,7 @@
 .mr-2{
   margin-right: 8px!important
 }
-._1cvivhm {
+.products-container__where-wrapper {
   margin-top: 24px!important
 }
 ._13wkz77,
